--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,13 +29,4 @@ jobs:
           git rm -rf .
           cd ..
           hexo g
-          
-      - name: Deploy
-        run: |
-          cd public
-          git config --global user.email "1084926982@qq.com"
-          git config --global user.name "Guiny-Time"
-          git add .
-          git commit -m "Automatic Deploy"
-          git push -f
-        
+          hexo d
