--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,6 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
 
       - name: Install
         run: |
@@ -29,4 +28,6 @@ jobs:
           git rm -rf .
           cd ..
           hexo g
+          git config --global user.email "1084926982@qq.com"
+          git config --global user.name "Guiny-Time"
           hexo d
