图床修复、更新月度计划

--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -18,10 +18,10 @@ class2:
       link: https://www.zhihu.com/people/li-zi-yuan-46-23?utm_source=qq&utm_medium=social&utm_oi=651433984723259392
       avatar: https://raw.githubusercontent.com/Guiny-Time/PictureBed/main/1.png
       descr: 这位便是终极大佬
-    - name: 轩の小窝
-      link: https://xuannp.top
-      avatar: https://i.postimg.cc/G3BMPb11/QQ-20220212234005.jpg
-      descr: 关于你想要的我这都有
+    - name: 沉于梦境-轻梦
+      link: https://cymj.ltd
+      avatar: https://www.imageoss.com/images/2022/07/19/kano.615da45222584d0aca9db8d6.jpg
+      descr: 沉于梦境-轻梦即现
 class3:
   class_name: 实用工具
   link_list:
