--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@neilsustc/markdown-it-katex": "^1.0.0",
     "@upupming/hexo-renderer-markdown-it-plus": "^2.0.2",
     "aplayer": "^1.10.1",
+    "axios": "^1.1.3",
     "hexo": "^5.0.0",
     "hexo-asset-image": "^1.0.0",
     "hexo-deployer-git": "^3.0.0",
@@ -33,5 +34,8 @@
     "hexo-theme-landscape": "^0.0.3",
     "hexo-wordcount": "^6.0.1",
     "vue-canvas-effect": "0.0.12"
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.19.4"
   }
 }
