--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -18,6 +18,10 @@ class2:
       link: https://xuannp.top
       avatar: https://i.postimg.cc/G3BMPb11/QQ-20220212234005.jpg
       descr: 关于你想要的我这都有
+    - name: Huskeybunch
+      link: https://huskybunch.github.io/
+      avatar: https://huskybunch.github.io/head.jpg
+      descr: 丁禹兮の老婆
 class3:
   class_name: 实用工具
   link_list:
