--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@upupming/hexo-renderer-markdown-it-plus": "^2.0.2",
     "aplayer": "^1.10.1",
     "hexo": "^5.0.0",
-    "hexo-asset-image": "^1.0.0",
+    "hexo-asset-image": "github:xcodebuild/hexo-asset-image",
+    "hexo-butterfly-tag-plugins-plus": "^1.0.17",
     "hexo-deployer-git": "^3.0.0",
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-category": "^1.0.0",
@@ -24,11 +25,13 @@
     "hexo-generator-search": "^2.4.3",
     "hexo-generator-tag": "^1.0.0",
     "hexo-renderer-ejs": "^1.0.0",
+    "hexo-renderer-kramed": "^0.1.4",
     "hexo-renderer-pug": "^1.0.0",
     "hexo-renderer-stylus": "^2.0.1",
     "hexo-server": "^2.0.0",
     "hexo-tag-aplayer": "^3.0.4",
     "hexo-tag-echarts": "^1.0.0",
+    "hexo-tag-mmedia": "^1.2.1",
     "hexo-theme-butterfly": "^3.7.8",
     "hexo-theme-landscape": "^0.0.3",
     "hexo-wordcount": "^6.0.1",
