排序算法相关、访客地图

--- a/themes/butterfly/_config.yml
+++ b/themes/butterfly/_config.yml
@@ -264,6 +264,7 @@ aside:
     post_count: true
     last_push_date: true
     sort_order: # Don't modify the setting unless you know how it works
+    card_map: true
 
 # busuanzi count for PV / UV in site
 # 訪問人數
