--- a/themes/butterfly/_config.yml
+++ b/themes/butterfly/_config.yml
@@ -911,6 +911,18 @@ inject:
     - '<script src="/js/universe.js"></script>' # 背景宇宙星光js文件
     - <div class="aplayer no-destroy" data-id="7263032154" data-server="netease" data-type="playlist" data-fixed="true" data-autoplay="true" data-lrcType="-1"> </div>
 
+markdown:
+  render:
+    html: true
+    xhtmlOut: false
+    breaks: true
+    linkify: true
+    typographer: true
+  plugins:
+  anchors:
+    level: 1
+    collisionSuffix: ''
+    
 # CDN
 # Don't modify the following settings unless you know how they work
 # 非必要請不要修改
