--- a/themes/butterfly/_config.yml
+++ b/themes/butterfly/_config.yml
@@ -906,7 +906,8 @@ inject:
     - <link rel="stylesheet" href="/css/fish.css">
   bottom:
     - <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
-    - <script src="https://gcore.jsdelivr.net/gh/xiabo2/CDN@latest/fishes.js"></script>
+    # 鱼塘
+    - <script defer data-pjax src="https://gcore.jsdelivr.net/gh/xiabo2/CDN@latest/fishes.js"></script>
     - '<script src="/js/snow.js"></script>' # 雪花效果
     - '<script src="/js/universe.js"></script>' # 背景宇宙星光js文件
     - <div class="aplayer no-destroy" data-id="7263032154" data-server="netease" data-type="playlist" data-fixed="true" data-autoplay="true" data-lrcType="-1"> </div>
