--- a/study_notes/_config.next.yml
+++ b/study_notes/_config.next.yml
@@ -116,7 +116,7 @@ mobile_layout_economy: true
 
 codeblock:
   theme:
-    light: default
+    light: github
     dark: stackoverflow-dark
   copy_button:
     enable: true
