--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "hexo-butterfly-tag-plugins-plus": "^1.0.17",
     "hexo-cli": "^4.3.1",
     "hexo-deployer-git": "^3.0.0",
+    "hexo-filter-mermaid-diagrams": "^1.0.5",
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-category": "^1.0.0",
     "hexo-generator-index-pin-top": "^0.2.2",
