这是一次装修
替换了背景图片和博客名称

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 猫窝工作室
+title: 几/何/冰/川
 subtitle: '时间的旅者，无痕的过客'
 description: Catty House
 keywords:
