--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: 几/何/冰/川
 subtitle: '时间的旅者，无痕的过客'
-description: Catty House
+description: 时间的旅者，无痕的过客
 keywords:
 author: 时光
 language: zh-CN
