--- a/themes/butterfly/_config.yml
+++ b/themes/butterfly/_config.yml
@@ -763,13 +763,13 @@ subtitle:
 
 # Loading Animation (加載動畫)
 preloader:
-  enable: false
+  enable: true
   # source
   # 1. fullpage-loading
   # 2. pace (progress bar)
   source: 2
   # pace theme (see https://codebyzach.github.io/pace/)
-  pace_css_url:
+  pace_css_url: https://cdn.jsdelivr.net/gh/CodeByZach/pace/themes/blue/pace-theme-fill-left.css
 
 # wordcount (字數統計)
 # see https://butterfly.js.org/posts/ceeb73f/#字數統計
@@ -910,6 +910,8 @@ inject:
     - <link rel="stylesheet" href="/css/fish.css">
     #波浪
     - <link rel="stylesheet" href="/css/wave.css">
+    #进度条
+    - <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/CodeByZach/pace/themes/green/pace-theme-flash.css">
   bottom:
     - <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
     # 鱼塘
