--- a/themes/butterfly/_config.yml
+++ b/themes/butterfly/_config.yml
@@ -86,7 +86,7 @@ cover:
   archives_enable: true
   # the position of cover in home page (封面顯示的位置)
   # left/right/both
-  position: both
+  position: left
   # When cover is not set, the default cover is displayed (當沒有設置cover時，默認的封面顯示)
   default_cover:
     - https://ae01.alicdn.com/kf/S4949e21c450e4f4aaf1ee9500b829269O.png
@@ -912,6 +912,8 @@ inject:
     - <link rel="stylesheet" href="/css/wave.css">
     #进度条
     - <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/CodeByZach/pace/themes/green/pace-theme-flash.css">
+    #文章分栏
+    - <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/Zfour/Butterfly-double-row-display@1.00/cardlistpost.css"/>
   bottom:
     - <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
     # 鱼塘
