--- a/themes/butterfly/_config.yml
+++ b/themes/butterfly/_config.yml
@@ -243,8 +243,8 @@ aside:
     sort: date # date or updated
     sort_order: # Don't modify the setting unless you know how it works
   card_categories:
-    enable: false
-    limit: 4 # if set 0 will show all
+    enable: true
+    limit: 0 # if set 0 will show all
     expand: none # none/true/false
     sort_order: # Don't modify the setting unless you know how it works
   card_tags:
@@ -255,8 +255,8 @@ aside:
     order: 1 # Sort of order. 1, asc for ascending; -1, desc for descending
     sort_order: # Don't modify the setting unless you know how it works
   card_archives:
-    enable: false
-    type: monthly # yearly or monthly
+    enable: true
+    type: yearly # yearly or monthly
     format: MMMM YYYY # eg: YYYY年MM月
     order: -1 # Sort of order. 1, asc for ascending; -1, desc for descending
     limit: 4 # if set 0 will show all
