--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "hexo-generator-index-pin-top": "^0.2.2",
     "hexo-generator-search": "^2.4.3",
     "hexo-generator-tag": "^1.0.0",
+    "hexo-magnet": "^1.0.9",
     "hexo-renderer-ejs": "^1.0.0",
     "hexo-renderer-kramed": "^0.1.4",
     "hexo-renderer-markdown-it-katex": "^3.4.4",
