--- a/themes/butterfly/_config.yml
+++ b/themes/butterfly/_config.yml
@@ -238,28 +238,28 @@ aside:
     enable: true
     content: 欢迎光临时光的博客！有关于本博客的详细信息请见<b>“关于”</b>。<br>本博客的访问方式：<a href="https://cattyhouse-guiny.xyz/">https://cattyhouse-guiny.xyz/</a> <br><a href="https://guiny-time.github.io/">https://guiny-time.github.io/</a>
   card_recent_post:
-    enable: false
-    limit: 4 # if set 0 will show all
+    enable: true
+    limit: 6 # if set 0 will show all
     sort: date # date or updated
     sort_order: # Don't modify the setting unless you know how it works
   card_categories:
-    enable: true
+    enable: false
     limit: 0 # if set 0 will show all
     expand: none # none/true/false
     sort_order: # Don't modify the setting unless you know how it works
   card_tags:
     enable: false
     limit: 40 # if set 0 will show all
-    color: false
+    color: true
     orderby: random # Order of tags, random/name/length
     order: 1 # Sort of order. 1, asc for ascending; -1, desc for descending
     sort_order: # Don't modify the setting unless you know how it works
   card_archives:
     enable: true
-    type: yearly # yearly or monthly
+    type: monthly # yearly or monthly
     format: MMMM YYYY # eg: YYYY年MM月
     order: -1 # Sort of order. 1, asc for ascending; -1, desc for descending
-    limit: 4 # if set 0 will show all
+    limit: 5 # if set 0 will show all
     sort_order: # Don't modify the setting unless you know how it works
   card_webinfo:
     enable: true
@@ -294,7 +294,7 @@ newest_comments:
 
 # Conversion between Traditional and Simplified Chinese (簡繁轉換)
 translate:
-  enable: true
+  enable: false
   # The text of a button
   default: 2
   # the language of website (1 - Traditional Chinese/ 2 - Simplified Chinese）
